feat: add rename of Infrastructure module to infrastructure